--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
+buildscript {
+    dependencies {
+        classpath 'com.h2database:h2:1.4.197'
+    }
+}
 plugins {
     id 'java'
+    id "org.flywaydb.flyway" version "7.8.2"
 }
-
+flyway {
+    url = 'jdbc:mysql://localhost/'
+    user = 'root'
+    password = 'root'
+    schemas = ['customers']
+    // locations = ['src/main/resources/db/migration']
+}
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -13,14 +25,19 @@ dependencies {
     testImplementation group: 'org.junit.jupiter',name:'junit-jupiter-api',version: '5.7.0'
     testRuntimeOnly group: 'org.junit.jupiter',name:'junit-jupiter-engine',version: '5.7.0'
     compile group: 'com.sparkjava',name:'spark-core',version: '2.9.3'
-    compile group: 'com.oracle.ojdbc',name: 'ojdbc8',version: '19.3.0.0'
+    //implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.24'
+
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.29'
     compile group: 'org.flywaydb',name:'flyway-core',version: '7.8.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    implementation group: 'com.google.inject', name: 'guice', version: '4.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.5.3'
+    compile 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
 
 }
-
 test {
     useJUnitPlatform()
 }
