--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     compile group: 'com.sparkjava',name:'spark-core',version: '2.9.3'
     //implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.24'
+    //implementation group: 'org.jdbi', name: 'jdbi', version: '2.78'
+    implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: '3.18.1'
+    implementation group: 'org.jdbi', name: 'jdbi3-core', version: '3.20.0'
+
 
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.29'
     compile group: 'org.flywaydb',name:'flyway-core',version: '7.8.2'
